# MTCNN-PureC

./: CMakeLists.txt  LICENSE  README.md  input1.txt  input2.txt
include/: arm_math_simplify.h  cv.h  mtcnn.h  network.h  test.h
model/: Rnet.txt
src/: Pnet.txt  arm_mat_mult_f32_simplify.c  cv.c  cv.h  main.c  mtcnn.c  mtcnn.h  network.c  network.h  test.h
